fix table layout misalignment on org

--- a/src-frontend/src/sass/app/_main-layout.scss
+++ b/src-frontend/src/sass/app/_main-layout.scss
@@ -44,7 +44,7 @@ html {
     flex: 1 1 0;
     display: flex;
     flex-direction: column;
-    .cs-table {
+    .cs-table.cs-table {
         flex: 1 1 0;
         overflow-y: auto;
         .cs-table-header {
